# asmim

./: CMakeLists.txt
lab1/: main.c  measure.s  script-clu.sh  script.sh
lab2/: first_part.s  main.c  script-clu.sh  script.sh  second_part.s
lab3/: first_part  lab3.cpp  script-pvserver.sh  script.sh  second_part
lab4/: main.c  non_vectorized.c  plain.h  script.sh  test.c  test.h  utils.c  utils.h
lab4/plain/: data_type.h  data_type_double.h  plain.h  plain1.c  plain2.c  plain4.c  plain_common.c  plain_std.c
lab4/test/: test.c  test.h  teststd.c  testv.c
